add broken wip and fixes

--- a/js/bf_to_gotofuck_transpiler/index.html
+++ b/js/bf_to_gotofuck_transpiler/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>GotoFuck Interpreter</title>
+        <title>Brainfuck to Gotofuck Transpiler</title>
 
         <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -13,7 +13,7 @@
     <body>
         <div class="main_div">
             <h1>
-                (BROKEN WIP) GotoFuck Interpreter
+                Brainfuck to Gotofuck Transpiler
             </h1>
             <p>by VilgotanL</p>
             <a href="https://esolangs.org/wiki/GotoFuck">GotoFuck</a>
@@ -22,7 +22,7 @@
             </div>
             <textarea id="input" class="input" contenteditable="true" spellcheck="false">code</textarea>
             <div class="btns_div">
-                <button id="run_btn" class="btn">Run</button>
+                <button id="transpile_btn" class="btn">Transpile</button>
             </div>
             <p id="output_info" class="output_info"></p>
             <pre id="output" class="output" spellcheck="false">output</pre>
