fix gotofuck transpiler and interpreter

--- a/js/gotofuck_interpreter/index.html
+++ b/js/gotofuck_interpreter/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="main_div">
             <h1>
-                (BROKEN WIP) GotoFuck Interpreter
+                GotoFuck Interpreter
             </h1>
             <p>by VilgotanL</p>
             <a href="https://esolangs.org/wiki/GotoFuck">GotoFuck</a>
