add brainif interpreter, fix bf interpreter, and add list.html

--- a/js/brainif_interpreter/index.html
+++ b/js/brainif_interpreter/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Brainfuck Interpreter</title>
+        <title>BrainIf Interpreter</title>
 
         <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -13,12 +13,12 @@
     <body>
         <div class="main_div">
             <h1>
-                Brainfuck Interpreter
+                BrainIf Interpreter
             </h1>
             <p>by VilgotanL</p>
-            <a href="https://esolangs.org/wiki/Brainfuck">Brainfuck</a>
+            <a href="https://esolangs.org/wiki/BrainIf">BrainIf</a>
             <div class="options_div">
-                <p>Don't freeze (slower):</p> <input id="dont_freeze_checkbox" class="options_div_checkbox" type="checkbox"/>
+                <!--<p>Debug:</p> <input id="debug_checkbox" class="options_div_checkbox" type="checkbox" />-->
             </div>
             <textarea id="input" class="input" contenteditable="true" spellcheck="false">code</textarea>
             <div class="btns_div">
