--- a/old_or_broken/broken_ndball_interpreter/index.html
+++ b/old_or_broken/broken_ndball_interpreter/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Brainfuck Interpreter</title>
+        <title>NDBall Interpreter</title>
 
         <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -13,17 +13,17 @@
     <body>
         <div class="main_div">
             <h1>
-                Brainfuck Interpreter
+                NDBall Interpreter
             </h1>
-            <p>by VilgotanL</p>
-            <a href="https://esolangs.org/wiki/Brainfuck">Brainfuck</a>
+            <p>ported to JS by VilgotanL,</p>
+            <a href="https://esolangs.org/wiki/NDBall">NDBall</a>
+            <p>by Aspwil</p>
             <div class="options_div">
-                <p>Don't freeze (slower):</p> <input id="dont_freeze_checkbox" class="options_div_checkbox" type="checkbox"/>
+                <!--<p>Debug:</p> <input id="debug_checkbox" class="options_div_checkbox" type="checkbox" />-->
             </div>
             <textarea id="input" class="input" contenteditable="true" spellcheck="false">code</textarea>
             <div class="btns_div">
                 <button id="run_btn" class="btn">Run</button>
-                <button id="minify_btn" class="btn">Minify</button>
             </div>
             <p id="output_info" class="output_info"></p>
             <pre id="output" class="output" spellcheck="false">output</pre>
