fix bugs and add garbage.bogus

--- a/js/bogus/index.html
+++ b/js/bogus/index.html
@@ -7,6 +7,7 @@
 
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/VilgotanL/v-interpreter-lib/v1/interpreter_lib.css">
         <script defer src="https://cdn.jsdelivr.net/gh/VilgotanL/v-interpreter-lib/v1/interpreter_lib.js"></script>
+        <!--<script defer src="../../../v_interpreter_lib/v1/interpreter_lib.js"></script>-->
         
         <script defer src="main.js"></script>
 	</head>
